--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@
 }
 
 .h1-display {
-    @apply font-cabinet font-bold text-7xl md:text-9xl leading-none drop-shadow-[0_0_15px_rgba(255, 255, 255, 0.5)] tracking-tighter;
+    @apply font-cabinet font-bold text-7xl md:text-9xl leading-none drop-shadow-[0_0_15px_rgba(255,255,255,0.5)] tracking-tighter;
 }
 
 .h2-display {
